# devcontainer-python

./: README.md  pyproject.toml
.devcontainer/: devcontainer.json  postCreateCommand.sh
.github/workflows/: test.yml
mymodule/: main.py
